--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,28 @@
 
     <!-- CSS Styles -->
     <link href="{{ site.baseurl }}/assets/css/style.css" rel="stylesheet">
+
+    <!-- Twitter cards -->
+    <meta name="twitter:site"    content="@{{ site.twitter_username }}">
+    <meta name="twitter:title"   content="{{ page.title }}">
+
+    {% if page.description %}
+    <meta name="twitter:description" content="{{ page.description }}">
+    {% else %}
+    <meta name="twitter:description" content="{{ site.description }}">
+    {% endif %}
+
+    <!-- Did I include an "image" variable in this post's front matter? -->
+    {% if page.featured_image %}
+    <!-- I did! Select the "large image" card type, and supply the image path -->
+    <meta name="twitter:card"  content="summary_large_image">
+    <meta name="twitter:image" content="{{ site.url }}{{ page.featured_image }}">
+    {% else %}
+    <!-- Nope! Select the "summary" card type, supplying the site's title image -->
+    <meta name="twitter:card"  content="summary">
+    <meta name="twitter:image" content="{{ site.title_image }}">
+    {% endif %}
+      <!-- end of Twitter cards -->
 </head>
 
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
