--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,7 @@ post_class: post-template
                 {% unless forloop.last %} {% endunless %}{% endfor %}
             </p>
             {% endif %}
+            <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
         </header><!-- .post-header -->
 
         {% if page.featured_image %}
